--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "টগল পর্দা জুড়ে প্রদর্শন",
   "app-menu-bookmark-actions": "বুকমার্ক-নির্বাচন কর্ম",
   "app-menu-bookmark-actions-reasoning": "যুক্তি",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "বুকমার্ক আমদানি করুন",
   "app-menu-export-as": "বুকমার্ক রপ্তানি করুন",
   "app-menu-bookmark-actions-media": "মিডিয়া",
