--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "i-toggle ang fullscreen",
   "app-menu-bookmark-actions": "mga aksyon sa pagpili sa bookmark",
   "app-menu-bookmark-actions-reasoning": "pangatarungan",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "import nga mga bookmark",
   "app-menu-export-as": "i-eksport ang mga bookmark",
   "app-menu-bookmark-actions-media": "media",
