--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "přepnout na celou obrazovku",
   "app-menu-bookmark-actions": "akce výběru záložek",
   "app-menu-bookmark-actions-reasoning": "uvažování",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importovat záložky",
   "app-menu-export-as": "exportovat záložky",
   "app-menu-bookmark-actions-media": "média",
