--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -8,7 +8,7 @@
   "app-tab-audio-chat-title": "audio-chat",
   "app-search-placeholder": "suchen",
   "app-menu-geospatial-search": "geografische suche",
-  "app-menu-features": "features",
+  "app-menu-features": "Merkmale",
   "app-menu-nature-location-quiz": "nature location quiz",
   "app-menu-structured-search": "strukturierte suche",
   "app-title-occurence": "Vorkommenskarte",
@@ -68,6 +68,11 @@
   "app-guide-bookmark-similarities": "Ähnlichkeiten",
   "app-guide-bookmark-implications": "Implikationen",
   "app-guide-bookmark-history": "Geschichte",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "Lesezeichen importieren",
   "app-menu-export-as": "Lesezeichen exportieren",
   "app-menu-bookmark-actions-media": "Medien",
@@ -76,11 +81,11 @@
   "app-menu-bread": "Wortanfang in Fettschrift",
   "app-menu-ai-tutor": "KI-Tutor",
   "app-menu-datasources": "Datenquellen",
-  "app-guide-bookmarks-selected": "selected",
-  "app-guide-bookmarks-deselect-all": "deselect all",
-  "app-menu-upload-json": "upload",
-  "app-guide-radio-map": "radio map",
-  "app-guide-world-statistics": "development trends",
+  "app-guide-bookmarks-selected": "ausgewählt",
+  "app-guide-bookmarks-deselect-all": "Alle abwählen",
+  "app-menu-upload-json": "JSON hochladen",
+  "app-guide-radio-map": "Radiokarte",
+  "app-guide-world-statistics": "Weltstatistik",
   "app-guide-news-gdelt": "GDELT",
   "app-guide-bookmark-gapminder-country-trend": "country trend",
   "app-menu-bookmark-current-view": "Aktuelle Ansicht als Lesezeichen speichern",
