--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -37,11 +37,17 @@
   "app-menu-toggle-fullscreen": "toggle fullscreen",
   "app-menu-bookmark-actions": "bookmark-selection actions",
   "app-menu-bookmark-actions-reasoning": "reasoning",
+  "app-menu-bookmark-actions-media": "media",
+  "app-menu-bookmark-current-view": "bookmark current view",
+  "app-menu-add-bookmark": "add bookmark",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "import bookmarks",
   "app-menu-export-as": "export bookmarks",
-  "app-menu-bookmark-actions-media": "media",
   "app-menu-upload-json": "upload",
-  "app-menu-bookmark-current-view": "bookmark current view",
   "app-menu-visual-search": "visual search",
   "app-menu-reading-assistance": "reading assistance",
   "app-menu-bread": "word-start bolding",
@@ -66,7 +72,6 @@
   "app-menu-pitch": "pitch",
   "app-menu-fullscreen-active-pane": "fullscreen the active pane",
   "app-menu-toggle-sidebar": "toggle the sidebar",
-  "app-menu-add-bookmark": "add bookmark",
   "app-menu-note-1": "note 1: only available when the focus is on the sidebar or a Wikipedia article pane.",
   "app-menu-features": "features",
   "app-menu-persona": "persona",
