--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "تمام صفحه را تغییر دهید",
   "app-menu-bookmark-actions": "اقدامات انتخاب نشانک",
   "app-menu-bookmark-actions-reasoning": "استدلال",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "وارد کردن نشانک ها",
   "app-menu-export-as": "صادرات نشانک ها",
   "app-menu-bookmark-actions-media": "رسانه ها",
