--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "vaihtaa koko näytön päälle",
   "app-menu-bookmark-actions": "kirjanmerkkien valintatoiminnot",
   "app-menu-bookmark-actions-reasoning": "perustelut",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "tuoda kirjanmerkkejä",
   "app-menu-export-as": "viedä kirjanmerkkejä",
   "app-menu-bookmark-actions-media": "media",
