--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "prebaci preko cijelog zaslona",
   "app-menu-bookmark-actions": "akcije odabira oznaka",
   "app-menu-bookmark-actions-reasoning": "rasuđivanje",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "uvoz knjižnih oznaka",
   "app-menu-export-as": "izvoz oznaka",
   "app-menu-bookmark-actions-media": "medijima",
