--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "passare a schermo intero",
   "app-menu-bookmark-actions": "azioni di selezione dei segnalibri",
   "app-menu-bookmark-actions-reasoning": "ragionamento",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importare segnalibri",
   "app-menu-export-as": "esportare segnalibri",
   "app-menu-bookmark-actions-media": "media",
