--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "फुलस्क्रीन टॉगल करा",
   "app-menu-bookmark-actions": "बुकमार्क-निवड क्रिया",
   "app-menu-bookmark-actions-reasoning": "तर्क",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "बुकमार्क आयात करा",
   "app-menu-export-as": "बुकमार्क निर्यात करा",
   "app-menu-bookmark-actions-media": "मीडिया",
