--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "alternar para o modo tela cheia",
   "app-menu-bookmark-actions": "ações de seleção de favoritos",
   "app-menu-bookmark-actions-reasoning": "raciocínio",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importar favoritos",
   "app-menu-export-as": "exportar favoritos",
   "app-menu-bookmark-actions-media": "meios de comunicação",
