--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "Включить полноэкранный режим",
   "app-menu-bookmark-actions": "действия по выбору закладок",
   "app-menu-bookmark-actions-reasoning": "рассуждение",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "импортировать закладки",
   "app-menu-export-as": "экспортировать закладки",
   "app-menu-bookmark-actions-media": "СМИ",
