--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "växla helskärm",
   "app-menu-bookmark-actions": "bokmärkesvalsåtgärder",
   "app-menu-bookmark-actions-reasoning": "resonemang",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importera bokmärken",
   "app-menu-export-as": "exportera bokmärken",
   "app-menu-bookmark-actions-media": "media",
