--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "geuza skrini nzima",
   "app-menu-bookmark-actions": "vitendo vya uteuzi wa alamisho",
   "app-menu-bookmark-actions-reasoning": "hoja",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "ingiza alamisho",
   "app-menu-export-as": "safirisha alamisho",
   "app-menu-bookmark-actions-media": "vyombo vya habari",
