--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "tam ekrana geç",
   "app-menu-bookmark-actions": "yer imi seçimi eylemleri",
   "app-menu-bookmark-actions-reasoning": "muhakeme",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "yer işaretlerini içe aktar",
   "app-menu-export-as": "yer işaretlerini dışa aktar",
   "app-menu-bookmark-actions-media": "medya",
