--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "پوری اسکرین کو ٹوگل کریں۔",
   "app-menu-bookmark-actions": "بک مارک کے انتخاب کے اعمال",
   "app-menu-bookmark-actions-reasoning": "استدلال",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "بُک مارکس درآمد کریں۔",
   "app-menu-export-as": "بک مارکس برآمد کریں۔",
   "app-menu-bookmark-actions-media": "میڈیا",
