--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "ملء الشاشة تبديل",
   "app-menu-bookmark-actions": "إجراءات اختيار الإشارة المرجعية",
   "app-menu-bookmark-actions-reasoning": "منطق",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "استيراد الإشارات المرجعية",
   "app-menu-export-as": "تصدير الإشارات المرجعية",
   "app-menu-bookmark-actions-media": "وسائط",
