--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "commuta la pantalla completa",
   "app-menu-bookmark-actions": "accions de selecció de marcadors",
   "app-menu-bookmark-actions-reasoning": "raonament",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importar adreces d'interès",
   "app-menu-export-as": "exportar adreces d'interès",
   "app-menu-bookmark-actions-media": "mitjans de comunicació",
