--- a/app/explore2/assets/i18n/ui/conzept-da.json
+++ b/app/explore2/assets/i18n/ui/conzept-da.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "skifte fuldskærm",
   "app-menu-bookmark-actions": "bogmærkevalgshandlinger",
   "app-menu-bookmark-actions-reasoning": "ræsonnement",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importere bogmærker",
   "app-menu-export-as": "eksportere bogmærker",
   "app-menu-bookmark-actions-media": "medier",
