--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "alternar pantalla completa",
   "app-menu-bookmark-actions": "acciones de selección de marcadores",
   "app-menu-bookmark-actions-reasoning": "razonamiento",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importar marcadores",
   "app-menu-export-as": "exportar marcadores",
   "app-menu-bookmark-actions-media": "medios de comunicación",
