--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "basculer en plein écran",
   "app-menu-bookmark-actions": "actions de sélection de favoris",
   "app-menu-bookmark-actions-reasoning": "raisonnement",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importer des signets",
   "app-menu-export-as": "exporter des signets",
   "app-menu-bookmark-actions-media": "médias",
