--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "kunna cikakken allo",
   "app-menu-bookmark-actions": "alamar shafi-zaɓi ayyuka",
   "app-menu-bookmark-actions-reasoning": "tunani",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "shigo da alamun shafi",
   "app-menu-export-as": "alamun fitarwa",
   "app-menu-bookmark-actions-media": "kafofin watsa labarai",
