--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "संपूर्ण स्क्रीन टॉगल करें",
   "app-menu-bookmark-actions": "बुकमार्क-चयन क्रियाएँ",
   "app-menu-bookmark-actions-reasoning": "तर्क",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "बुकमार्क आयात करें",
   "app-menu-export-as": "बुकमार्क निर्यात करें",
   "app-menu-bookmark-actions-media": "मिडिया",
