--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "beralih ke layar penuh",
   "app-menu-bookmark-actions": "tindakan pemilihan bookmark",
   "app-menu-bookmark-actions-reasoning": "pemikiran",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "impor bookmark",
   "app-menu-export-as": "ekspor bookmark",
   "app-menu-bookmark-actions-media": "media",
