--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "フルスクリーン切り替え",
   "app-menu-bookmark-actions": "ブックマーク選択アクション",
   "app-menu-bookmark-actions-reasoning": "推論",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "ブックマークをインポートする",
   "app-menu-export-as": "ブックマークをエクスポートする",
   "app-menu-bookmark-actions-media": "メディア",
