--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "전체 화면 전환",
   "app-menu-bookmark-actions": "북마크 선택 작업",
   "app-menu-bookmark-actions-reasoning": "추리",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "북마크 가져오기",
   "app-menu-export-as": "북마크 내보내기",
   "app-menu-bookmark-actions-media": "미디어",
