--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "volledig scherm activeren",
   "app-menu-bookmark-actions": "bladwijzer selectie acties",
   "app-menu-bookmark-actions-reasoning": "redenering",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "bladwijzers importeren",
   "app-menu-export-as": "bladwijzers exporteren",
   "app-menu-bookmark-actions-media": "media",
