--- a/app/explore2/assets/i18n/ui/conzept-no.json
+++ b/app/explore2/assets/i18n/ui/conzept-no.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "veksle mellom fullskjerm",
   "app-menu-bookmark-actions": "handlinger for bokmerkevalg",
   "app-menu-bookmark-actions-reasoning": "argumentasjon",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "importere bokmerker",
   "app-menu-export-as": "eksportere bokmerker",
   "app-menu-bookmark-actions-media": "media",
