--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "укључите цео екран",
   "app-menu-bookmark-actions": "радње избора обележивача",
   "app-menu-bookmark-actions-reasoning": "расуђивање",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "увоз обележивача",
   "app-menu-export-as": "извоз обележивача",
   "app-menu-bookmark-actions-media": "медија",
