--- a/app/explore2/assets/i18n/ui/conzept-te.json
+++ b/app/explore2/assets/i18n/ui/conzept-te.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "மாற்று முழுத்திரை",
   "app-menu-bookmark-actions": "புக்மார்க்-தேர்வு நடவடிக்கைகள்",
   "app-menu-bookmark-actions-reasoning": "நியாயப்படுத்துதல்",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "புக்மார்க்குகளை இறக்குமதி",
   "app-menu-export-as": "புக்மார்க்குகளை ஏற்றுமதி செய்யவும்",
   "app-menu-bookmark-actions-media": "ஊடகம்",
