--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "перемкнути повноекранний режим",
   "app-menu-bookmark-actions": "дії закладки-вибору",
   "app-menu-bookmark-actions-reasoning": "міркування",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "імпортувати закладки",
   "app-menu-export-as": "експортувати закладки",
   "app-menu-bookmark-actions-media": "ЗМІ",
