--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "bật chế độ toàn màn hình",
   "app-menu-bookmark-actions": "hành động chọn dấu trang",
   "app-menu-bookmark-actions-reasoning": "lý luận",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "nhập dấu trang",
   "app-menu-export-as": "xuất dấu trang",
   "app-menu-bookmark-actions-media": "phương tiện truyền thông",
