--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -33,6 +33,11 @@
   "app-menu-toggle-fullscreen": "切换全屏",
   "app-menu-bookmark-actions": "书签选择操作",
   "app-menu-bookmark-actions-reasoning": "推理",
+  "app-menu-add-bookmark-title": "title",
+  "app-menu-add-bookmark-url": "url",
+  "app-menu-add-bookmark-images": "images",
+  "app-menu-add-bookmark-clear-files": "clear files",
+  "app-menu-add-bookmark-submit": "add bookmark",
   "app-menu-import-as": "导入书签",
   "app-menu-export-as": "导出书签",
   "app-menu-bookmark-actions-media": "媒体",
