--- a/app/explore2/assets/i18n/ui/conzept-ar.json
+++ b/app/explore2/assets/i18n/ui/conzept-ar.json
@@ -14,6 +14,7 @@
   "app-title-sub": "الفرعية",
   "app-title-pages": "الصفحات",
   "app-title-citations": "اقتباسات",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "أجراءات",
   "app-menu-background-audio": "صوتي",
   "app-menu-background-midi": "ميدي",
