--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -14,6 +14,7 @@
   "app-title-sub": "উপ",
   "app-title-pages": "পৃষ্ঠাগুলি",
   "app-title-citations": "উদ্ধৃতি",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "কর্ম",
   "app-menu-background-audio": "শ্রুতি",
   "app-menu-background-midi": "MIDI",
