--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "mga panid",
   "app-title-citations": "Mga kinutlo",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "mga aksyon",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
