--- a/app/explore2/assets/i18n/ui/conzept-cs.json
+++ b/app/explore2/assets/i18n/ui/conzept-cs.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "stránky",
   "app-title-citations": "Citace",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "akce",
   "app-menu-background-audio": "Zvuk",
   "app-menu-background-midi": "MIDI",
