--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -41,6 +41,7 @@
   "app-section-location-travel": "reisen",
   "app-section-location-weather": "Wetter",
   "app-section-location-real-estate": "Immobilie",
+  "app-menu-sort-by": "sortieren nach",
   "app-menu-actions": "Aktionen",
   "app-menu-background-audio": "Audio-",
   "app-menu-background-midi": "MIDI",
