--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -18,6 +18,7 @@
   "app-title-pages": "pages",
   "app-title-citations": "Citations",
 
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "actions",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
