--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -14,6 +14,7 @@
   "app-title-sub": "زیر",
   "app-title-pages": "صفحات",
   "app-title-citations": "استناد",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "اقدامات",
   "app-menu-background-audio": "سمعی",
   "app-menu-background-midi": "MIDI",
