--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sous",
   "app-title-pages": "pages",
   "app-title-citations": "Citations",
+  "app-menu-sort-by": "trier par",
   "app-menu-actions": "Actions",
   "app-menu-background-audio": "l'audio",
   "app-menu-background-midi": "MIDI",
