--- a/app/explore2/assets/i18n/ui/conzept-ha.json
+++ b/app/explore2/assets/i18n/ui/conzept-ha.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "shafuka",
   "app-title-citations": "ambato",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "ayyuka",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
