--- a/app/explore2/assets/i18n/ui/conzept-hi.json
+++ b/app/explore2/assets/i18n/ui/conzept-hi.json
@@ -14,6 +14,7 @@
   "app-title-sub": "विषय",
   "app-title-pages": "पृष्ठों",
   "app-title-citations": "उद्धरण",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "कार्रवाई",
   "app-menu-background-audio": "ऑडियो",
   "app-menu-background-midi": "मिडी",
