--- a/app/explore2/assets/i18n/ui/conzept-hr.json
+++ b/app/explore2/assets/i18n/ui/conzept-hr.json
@@ -14,6 +14,7 @@
   "app-title-sub": "pod",
   "app-title-pages": "stranice",
   "app-title-citations": "Citati",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "akcije",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
