--- a/app/explore2/assets/i18n/ui/conzept-id.json
+++ b/app/explore2/assets/i18n/ui/conzept-id.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "halaman",
   "app-title-citations": "Kutipan",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "tindakan",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
