--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -14,6 +14,7 @@
   "app-title-sub": "보결",
   "app-title-pages": "페이지",
   "app-title-citations": "인용",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "행위",
   "app-menu-background-audio": "오디오",
   "app-menu-background-midi": "미디",
