--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -14,6 +14,7 @@
   "app-title-sub": "उप",
   "app-title-pages": "पृष्ठे",
   "app-title-citations": "उद्धरण",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "क्रिया",
   "app-menu-background-audio": "ऑडिओ",
   "app-menu-background-midi": "MIDI",
