--- a/app/explore2/assets/i18n/ui/conzept-sw.json
+++ b/app/explore2/assets/i18n/ui/conzept-sw.json
@@ -14,6 +14,7 @@
   "app-title-sub": "ndogo",
   "app-title-pages": "kurasa",
   "app-title-citations": "Manukuu",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "Vitendo",
   "app-menu-background-audio": "sauti",
   "app-menu-background-midi": "MIDI",
