--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -14,6 +14,7 @@
   "app-title-sub": "துணை",
   "app-title-pages": "பக்கங்கள்",
   "app-title-citations": "மேற்கோள்கள்",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "செயல்கள்",
   "app-menu-background-audio": "ஆடியோ",
   "app-menu-background-midi": "MIDI",
