--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -14,6 +14,7 @@
   "app-title-sub": "alt",
   "app-title-pages": "sayfalar",
   "app-title-citations": "Alıntılar",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "hareketler",
   "app-menu-background-audio": "ses",
   "app-menu-background-midi": "MİDİ",
