--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -14,6 +14,7 @@
   "app-title-sub": "ذیلی",
   "app-title-pages": "صفحات",
   "app-title-citations": "حوالہ جات",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "اعمال",
   "app-menu-background-audio": "آڈیو",
   "app-menu-background-midi": "MIDI",
