--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -14,6 +14,7 @@
   "app-title-sub": "phụ",
   "app-title-pages": "trang",
   "app-title-citations": "Trích dẫn",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "hành động",
   "app-menu-background-audio": "âm thanh",
   "app-menu-background-midi": "MIDI",
