--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -14,6 +14,7 @@
   "app-title-sub": "子",
   "app-title-pages": "页面",
   "app-title-citations": "引文",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "行动",
   "app-menu-background-audio": "声音的",
   "app-menu-background-midi": "MIDI",
