--- a/app/explore2/assets/i18n/ui/conzept-ca.json
+++ b/app/explore2/assets/i18n/ui/conzept-ca.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "pàgines",
   "app-title-citations": "Citacions",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "accions",
   "app-menu-background-audio": "àudio",
   "app-menu-background-midi": "MIDI",
