--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "paginas",
   "app-title-citations": "Citas",
+  "app-menu-sort-by": "ordenar por",
   "app-menu-actions": "comportamiento",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "midi",
