--- a/app/explore2/assets/i18n/ui/conzept-fi.json
+++ b/app/explore2/assets/i18n/ui/conzept-fi.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "sivuja",
   "app-title-citations": "Lainaukset",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "Toiminnot",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
