--- a/app/explore2/assets/i18n/ui/conzept-it.json
+++ b/app/explore2/assets/i18n/ui/conzept-it.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "pagine",
   "app-title-citations": "Citazioni",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "Azioni",
   "app-menu-background-audio": "Audio",
   "app-menu-background-midi": "MIDI",
