--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -14,6 +14,7 @@
   "app-title-sub": "サブ",
   "app-title-pages": "ページ",
   "app-title-citations": "引用",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "行動",
   "app-menu-background-audio": "オーディオ",
   "app-menu-background-midi": "ミディ",
