--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "Pagina's",
   "app-title-citations": "Citaties",
+  "app-menu-sort-by": "sorteer op",
   "app-menu-actions": "acties",
   "app-menu-background-audio": "geluid",
   "app-menu-background-midi": "MIDI",
