--- a/app/explore2/assets/i18n/ui/conzept-pt.json
+++ b/app/explore2/assets/i18n/ui/conzept-pt.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "Páginas",
   "app-title-citations": "Citações",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "ações",
   "app-menu-background-audio": "áudio",
   "app-menu-background-midi": "MIDI",
