--- a/app/explore2/assets/i18n/ui/conzept-ru.json
+++ b/app/explore2/assets/i18n/ui/conzept-ru.json
@@ -14,6 +14,7 @@
   "app-title-sub": "суб",
   "app-title-pages": "страницы",
   "app-title-citations": "Цитаты",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "действия",
   "app-menu-background-audio": "аудио",
   "app-menu-background-midi": "МИДИ",
