--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -14,6 +14,7 @@
   "app-title-sub": "суб",
   "app-title-pages": "странице",
   "app-title-citations": "Цитати",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "радње",
   "app-menu-background-audio": "аудио",
   "app-menu-background-midi": "МИДИ",
