--- a/app/explore2/assets/i18n/ui/conzept-sv.json
+++ b/app/explore2/assets/i18n/ui/conzept-sv.json
@@ -14,6 +14,7 @@
   "app-title-sub": "sub",
   "app-title-pages": "sidor",
   "app-title-citations": "Citat",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "handlingar",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
