--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -14,6 +14,7 @@
   "app-title-sub": "суб",
   "app-title-pages": "сторінки",
   "app-title-citations": "Цитування",
+  "app-menu-sort-by": "sort by",
   "app-menu-actions": "дії",
   "app-menu-background-audio": "аудіо",
   "app-menu-background-midi": "MIDI",
