--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -42,6 +42,10 @@
   "app-section-location-weather": "Wetter",
   "app-section-location-real-estate": "Immobilie",
   "app-menu-sort-by": "sortieren nach",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "Aktionen",
   "app-menu-background-audio": "Audio-",
   "app-menu-background-midi": "MIDI",
