--- a/app/explore2/assets/i18n/ui/conzept-ko.json
+++ b/app/explore2/assets/i18n/ui/conzept-ko.json
@@ -15,6 +15,10 @@
   "app-title-pages": "페이지",
   "app-title-citations": "인용",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "행위",
   "app-menu-background-audio": "오디오",
   "app-menu-background-midi": "미디",
