--- a/app/explore2/assets/i18n/ui/conzept-mr.json
+++ b/app/explore2/assets/i18n/ui/conzept-mr.json
@@ -15,6 +15,10 @@
   "app-title-pages": "पृष्ठे",
   "app-title-citations": "उद्धरण",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "क्रिया",
   "app-menu-background-audio": "ऑडिओ",
   "app-menu-background-midi": "MIDI",
