--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -15,6 +15,10 @@
   "app-title-pages": "Pagina's",
   "app-title-citations": "Citaties",
   "app-menu-sort-by": "sorteer op",
+  "app-menu-search-in": "zoek in",
+  "app-menu-search-in-option-references": "naslagwerken",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevantie ↓",
   "app-menu-actions": "acties",
   "app-menu-background-audio": "geluid",
   "app-menu-background-midi": "MIDI",
