--- a/app/explore2/assets/i18n/ui/conzept-ta.json
+++ b/app/explore2/assets/i18n/ui/conzept-ta.json
@@ -15,6 +15,10 @@
   "app-title-pages": "பக்கங்கள்",
   "app-title-citations": "மேற்கோள்கள்",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "செயல்கள்",
   "app-menu-background-audio": "ஆடியோ",
   "app-menu-background-midi": "MIDI",
