--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -15,6 +15,10 @@
   "app-title-pages": "পৃষ্ঠাগুলি",
   "app-title-citations": "উদ্ধৃতি",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "কর্ম",
   "app-menu-background-audio": "শ্রুতি",
   "app-menu-background-midi": "MIDI",
