--- a/app/explore2/assets/i18n/ui/conzept-ceb.json
+++ b/app/explore2/assets/i18n/ui/conzept-ceb.json
@@ -15,6 +15,10 @@
   "app-title-pages": "mga panid",
   "app-title-citations": "Mga kinutlo",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "mga aksyon",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "MIDI",
