--- a/app/explore2/assets/i18n/ui/conzept-es.json
+++ b/app/explore2/assets/i18n/ui/conzept-es.json
@@ -15,6 +15,10 @@
   "app-title-pages": "paginas",
   "app-title-citations": "Citas",
   "app-menu-sort-by": "ordenar por",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "comportamiento",
   "app-menu-background-audio": "audio",
   "app-menu-background-midi": "midi",
