--- a/app/explore2/assets/i18n/ui/conzept-fa.json
+++ b/app/explore2/assets/i18n/ui/conzept-fa.json
@@ -15,6 +15,10 @@
   "app-title-pages": "صفحات",
   "app-title-citations": "استناد",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "اقدامات",
   "app-menu-background-audio": "سمعی",
   "app-menu-background-midi": "MIDI",
