--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -15,6 +15,10 @@
   "app-title-pages": "pages",
   "app-title-citations": "Citations",
   "app-menu-sort-by": "trier par",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "Actions",
   "app-menu-background-audio": "l'audio",
   "app-menu-background-midi": "MIDI",
