--- a/app/explore2/assets/i18n/ui/conzept-ja.json
+++ b/app/explore2/assets/i18n/ui/conzept-ja.json
@@ -15,6 +15,10 @@
   "app-title-pages": "ページ",
   "app-title-citations": "引用",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "行動",
   "app-menu-background-audio": "オーディオ",
   "app-menu-background-midi": "ミディ",
