--- a/app/explore2/assets/i18n/ui/conzept-sr.json
+++ b/app/explore2/assets/i18n/ui/conzept-sr.json
@@ -15,6 +15,10 @@
   "app-title-pages": "странице",
   "app-title-citations": "Цитати",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "радње",
   "app-menu-background-audio": "аудио",
   "app-menu-background-midi": "МИДИ",
