--- a/app/explore2/assets/i18n/ui/conzept-tr.json
+++ b/app/explore2/assets/i18n/ui/conzept-tr.json
@@ -15,6 +15,10 @@
   "app-title-pages": "sayfalar",
   "app-title-citations": "Alıntılar",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "hareketler",
   "app-menu-background-audio": "ses",
   "app-menu-background-midi": "MİDİ",
