--- a/app/explore2/assets/i18n/ui/conzept-uk.json
+++ b/app/explore2/assets/i18n/ui/conzept-uk.json
@@ -15,6 +15,10 @@
   "app-title-pages": "сторінки",
   "app-title-citations": "Цитування",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "дії",
   "app-menu-background-audio": "аудіо",
   "app-menu-background-midi": "MIDI",
