--- a/app/explore2/assets/i18n/ui/conzept-ur.json
+++ b/app/explore2/assets/i18n/ui/conzept-ur.json
@@ -15,6 +15,10 @@
   "app-title-pages": "صفحات",
   "app-title-citations": "حوالہ جات",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "اعمال",
   "app-menu-background-audio": "آڈیو",
   "app-menu-background-midi": "MIDI",
