--- a/app/explore2/assets/i18n/ui/conzept-vi.json
+++ b/app/explore2/assets/i18n/ui/conzept-vi.json
@@ -15,6 +15,10 @@
   "app-title-pages": "trang",
   "app-title-citations": "Trích dẫn",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "hành động",
   "app-menu-background-audio": "âm thanh",
   "app-menu-background-midi": "MIDI",
