--- a/app/explore2/assets/i18n/ui/conzept-zh.json
+++ b/app/explore2/assets/i18n/ui/conzept-zh.json
@@ -15,6 +15,10 @@
   "app-title-pages": "页面",
   "app-title-citations": "引文",
   "app-menu-sort-by": "sort by",
+  "app-menu-search-in": "search in",
+  "app-menu-search-in-option-references": "references",
+  "app-menu-api-keys": "API keys",
+  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-actions": "行动",
   "app-menu-background-audio": "声音的",
   "app-menu-background-midi": "MIDI",
