--- a/app/explore2/assets/i18n/ui/conzept-bn.json
+++ b/app/explore2/assets/i18n/ui/conzept-bn.json
@@ -19,6 +19,21 @@
   "app-menu-search-in-option-references": "references",
   "app-menu-api-keys": "API keys",
   "app-menu-sort-by-option-relevance-desc": "relevance ↓",
+  "app-menu-search-in-option-culture": "culture",
+  "app-menu-search-in-option-science": "science",
+  "app-menu-search-in-option-business": "business",
+  "app-menu-sort-by-option-relevance-asc": "relevance ↑",
+  "app-menu-sort-by-option-date-desc": "date ↓",
+  "app-menu-sort-by-option-date-asc": "date ↑",
+  "app-menu-sort-by-option-update-asc": "update ↑",
+  "app-menu-sort-by-option-update-desc": "update ↓",
+  "app-menu-sort-by-option-random": "random",
+  "app-menu-sort-by-option-citations-desc": "citations ↓",
+  "app-menu-sort-by-option-citations-asc": "citations ↑",
+  "app-menu-sort-by-option-title-desc": "title ↓",
+  "app-menu-sort-by-option-title-asc": "title ↑",
+  "app-menu-sort-by-option-distance-asc": "distance ↑",
+  "app-menu-sort-by-option-distance-desc": "distance ↓",
   "app-menu-actions": "কর্ম",
   "app-menu-background-audio": "শ্রুতি",
   "app-menu-background-midi": "MIDI",
