--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -42,10 +42,25 @@
   "app-section-location-weather": "Wetter",
   "app-section-location-real-estate": "Immobilie",
   "app-menu-sort-by": "sortieren nach",
-  "app-menu-search-in": "search in",
+  "app-menu-search-in": "suchen in",
   "app-menu-search-in-option-references": "references",
   "app-menu-api-keys": "API keys",
-  "app-menu-sort-by-option-relevance-desc": "relevance ↓",
+  "app-menu-search-in-option-culture": "kulture",
+  "app-menu-search-in-option-science": "wissenschaft",
+  "app-menu-search-in-option-business": "geschäft",
+  "app-menu-sort-by-option-relevance-desc": "relevanz ↓",
+  "app-menu-sort-by-option-relevance-asc": "relevanz ↑",
+  "app-menu-sort-by-option-date-desc": "datum ↓",
+  "app-menu-sort-by-option-date-asc": "datum ↑",
+  "app-menu-sort-by-option-update-asc": "update ↑",
+  "app-menu-sort-by-option-update-desc": "update ↓",
+  "app-menu-sort-by-option-random": "random",
+  "app-menu-sort-by-option-citations-desc": "citations ↓",
+  "app-menu-sort-by-option-citations-asc": "citations ↑",
+  "app-menu-sort-by-option-title-desc": "title ↓",
+  "app-menu-sort-by-option-title-asc": "title ↑",
+  "app-menu-sort-by-option-distance-asc": "distance ↑",
+  "app-menu-sort-by-option-distance-desc": "distance ↓",
   "app-menu-actions": "Aktionen",
   "app-menu-background-audio": "Audio-",
   "app-menu-background-midi": "MIDI",
