--- a/app/explore2/assets/i18n/ui/conzept-nl.json
+++ b/app/explore2/assets/i18n/ui/conzept-nl.json
@@ -17,8 +17,23 @@
   "app-menu-sort-by": "sorteer op",
   "app-menu-search-in": "zoek in",
   "app-menu-search-in-option-references": "naslagwerken",
-  "app-menu-api-keys": "API keys",
+  "app-menu-api-keys": "API sleutels",
   "app-menu-sort-by-option-relevance-desc": "relevantie ↓",
+  "app-menu-search-in-option-culture": "cultuur",
+  "app-menu-search-in-option-science": "wetenschap",
+  "app-menu-search-in-option-business": "zakelijk",
+  "app-menu-sort-by-option-relevance-asc": "relevantie ↑",
+  "app-menu-sort-by-option-date-desc": "datum ↓",
+  "app-menu-sort-by-option-date-asc": "datum ↑",
+  "app-menu-sort-by-option-update-asc": "update ↑",
+  "app-menu-sort-by-option-update-desc": "update ↓",
+  "app-menu-sort-by-option-random": "willekeurig",
+  "app-menu-sort-by-option-citations-desc": "citaten ↓",
+  "app-menu-sort-by-option-citations-asc": "citaten ↑",
+  "app-menu-sort-by-option-title-desc": "titel ↓",
+  "app-menu-sort-by-option-title-asc": "titel ↑",
+  "app-menu-sort-by-option-distance-asc": "afstand ↑",
+  "app-menu-sort-by-option-distance-desc": "afstand ↓",
   "app-menu-actions": "acties",
   "app-menu-background-audio": "geluid",
   "app-menu-background-midi": "MIDI",
