grid mode with larger thumb

--- a/app/explore2/assets/i18n/ui/conzept-de.json
+++ b/app/explore2/assets/i18n/ui/conzept-de.json
@@ -43,8 +43,8 @@
   "app-section-location-real-estate": "Immobilie",
   "app-menu-sort-by": "sortieren nach",
   "app-menu-search-in": "suchen in",
-  "app-menu-search-in-option-references": "references",
-  "app-menu-api-keys": "API keys",
+  "app-menu-search-in-option-references": "nachschlagewerke",
+  "app-menu-api-keys": "API-Schlüssel",
   "app-menu-search-in-option-culture": "kulture",
   "app-menu-search-in-option-science": "wissenschaft",
   "app-menu-search-in-option-business": "geschäft",
@@ -62,7 +62,7 @@
   "app-menu-sort-by-option-distance-asc": "distance ↑",
   "app-menu-sort-by-option-distance-desc": "distance ↓",
   "app-menu-actions": "Aktionen",
-  "app-menu-background-audio": "Audio-",
+  "app-menu-background-audio": "Audio",
   "app-menu-background-midi": "MIDI",
   "app-menu-topic-lists": "Themenlisten",
   "app-menu-various-links": "diverse Links",
