--- a/app/explore2/assets/i18n/ui/conzept-en.json
+++ b/app/explore2/assets/i18n/ui/conzept-en.json
@@ -20,7 +20,7 @@
 
   "app-menu-api-keys": "API keys",
   "app-menu-search-in": "search in",
-  "app-menu-search-in-option-references": "references",
+  "app-menu-search-in-option-references": "reference works",
   "app-menu-search-in-option-culture": "culture",
   "app-menu-search-in-option-science": "science",
   "app-menu-search-in-option-business": "business",
