--- a/app/explore2/assets/i18n/ui/conzept-fr.json
+++ b/app/explore2/assets/i18n/ui/conzept-fr.json
@@ -16,7 +16,7 @@
   "app-title-citations": "Citations",
   "app-menu-sort-by": "trier par",
   "app-menu-search-in": "search in",
-  "app-menu-search-in-option-reference": "references",
+  "app-menu-search-in-option-reference": "reference",
   "app-menu-api-keys": "API keys",
   "app-menu-sort-by-option-relevance-desc": "relevance ↓",
   "app-menu-search-in-option-culture": "culture",
